# cass_logger_app

./: .gitignore  CLAUDE.md  CassLogger.spec  PRD.md  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: download_and_plot_ex.py  download_and_process_example.py  load_and_plot_ex.py
gui/: README.md  app.py  requirements.txt
gui/api/: _result.py  main_api.py
gui/assets/: CassLogger.icns
gui/frontend/: index.html  package-lock.json  package.json  vite.config.ts
gui/frontend/src/: App.css  App.tsx  main.tsx  types.ts
gui/frontend/src/components/: ConfigPanel.tsx  DataPanel.tsx  DevicePanel.tsx  FilesPanel.tsx  FirmwarePanel.tsx  UpdateBanner.tsx
gui/services/: cass_service.py  firmware_service.py  update_service.py
scripts/: fetch_teensy_tools.py  generate_manifest.py  release.py  release_firmware.py
src/: cass_commands.py
